--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -3,7 +3,9 @@
 html { font-family: sans-serif; /* 1 */ -ms-text-size-adjust: 100%; /* 2 */ -webkit-text-size-adjust: 100%; /* 2 */ }
 
 /** Remove the margin in all browsers (opinionated). */
-body { margin: 0; }
+body { margin: 0;
+  overflow-wrap: break-word;
+}
 
 /* HTML5 display definitions ========================================================================== */
 /** Add the correct display in IE 9-. 1. Add the correct display in Edge, IE, and Firefox. 2. Add the correct display in IE. */
