--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -101,7 +101,7 @@
   <div class="container">
     <div class="section">
 
-        <div class="row" style="padding-top: 50px">
+        <div class="row">
             <myname class="col s12 m12" style="padding-bottom:10px; font-size: 40px; font-family: 'Chicago'; color: white;" id="title"></myname>
           <div class="col s12 m12"></div>
 
