--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -223,12 +223,6 @@
                   <p class="light">I'm a hard worker.</p>
                </div>
             </div>
-         <!-- Technical Work -->
-         <div class="row">
-            <div class="col s12 m12">
-               <h4 class="left-align" style="border-bottom: 2px solid rgb(116,250,253); color: rgb(116,250,253)">Data Engineer Work</h4>
-            </div>
-         </div>
          <div class="row">
             <div class="col s12 m6">
                <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,253)">Artsy</h5>
@@ -256,12 +250,6 @@
                   <p class="light">I'm a hard worker.</p>
                </div>
             </div>
-            <!-- Conservation/Archives -->
-         <div class="row flow-text">
-            <div class="col s12 m12">
-               <h4 class="left-align" style="border-bottom: 2px solid rgb(116,250,253); color: rgb(116,250,253)">Conservation/Archives Work</h4>
-            </div>
-         </div>
          <div class="row">
             <div class="col s12 m6">
                <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,253)">net.flag</h5>
@@ -304,11 +292,12 @@
 
     <div class="info" id="option4">
       <div class="row">
-           <div class="col s14 m12">
-
-              <h3 id="art" style="border-bottom: 3px solid rgb(116,250,75);color: rgb(116,250,75)">Net Art</h3>
+           <div class="col s12 m12">
+              <h3 id="work" style="border-bottom: 3px solid rgb(116,250,75);color:rgb(116,250,75)">Art</h3>
+              <p class="light">I'm a hard worker.</p>
            </div>
         </div>
+
         <div class="row">
            <div class="col s12 m5">
               <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,75) ">Mixed Connections</h5>
@@ -335,10 +324,10 @@
 
     <div class="info" id="option5">
       <div class="row">
-        <div class="col s14 m12">
-           <h3 id="art" style="border-bottom: 3px solid rgb(116,250,75);color: rgb(116,250,75)">Commissions</h3>
+        <div class="col s12 m12">
+           <h3 id="work" style="border-bottom: 3px solid rgb(116,250,75);color:rgb(116,250,75)">Art</h3>
         </div>
-       </div>
+     </div>
          <div class="row">
            <div class="col s12 m5">
               <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,75) ">Tinkerer's Aquarium</h5>
@@ -357,10 +346,9 @@
     <div class="info" id="option6">
 
       <div class="row">
-        <div class="col s14 m12">
-           <h3 id="art" style="border-bottom: 3px solid rgb(116,250,75);color: rgb(116,250,75)">New Media Art</h3>
+        <div class="col s12 m12">
+           <h3 id="work" style="border-bottom: 3px solid rgb(116,250,75);color:rgb(116,250,75)">Art</h3>
         </div>
-        <div class="col s12 m6"></div>
      </div>
      <div class="row">
         <div class="col s12 m5">
@@ -377,10 +365,7 @@
            <p> Users slip on a VR headset where a camera dangles above their head and voluntarily enter a space of anxiety and removal from themselves.<br><br> </p>
            <a href=""><img src="assets/images/goggles.jpg" style="width:100%" /></a>
         </div>
-        <div class="row">
-           <div class="col s12 m12"> </div>
-        </div>
-        <br> <br> <br>
+
       </div>
       <div class="row">
          <div class="col s12 m5">
@@ -407,24 +392,23 @@
 
      <div class="info" id="option7">
        <div class="row">
-         <div class="col s14 m12">
-            <h3 id="art" style="border-bottom: 3px solid rgb(116,250,75);color: rgb(116,250,75)">Visual Synth</h3>
+         <div class="col s12 m12">
+            <h3 id="work" style="border-bottom: 3px solid rgb(116,250,75);color:rgb(116,250,75)">Art</h3>
          </div>
+      </div>
           <div class="col s12 m8">
              <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,75) ">508 Loop Detected</h5>
              <p><a href="https://508.loopdetected.net/video-gallery/">508 Loop Detected</a> Is a hardware collaboration project that resulted in a rgb based visual synth. I've used it in several local performances. <br><br></p>
              <a href=""><img src="assets/images/ec500.jpg" style="width:50%" /></a>
           </div>
        </div>
-     </div>
 
      <div class="info" id="option8">
        <div class="row">
-         <div class="col s14 m12">
-            <h3 id="art" style="border-bottom: 3px solid rgb(116,250,75);color: rgb(116,250,75)">Residencies</h3>
+         <div class="col s12 m12">
+            <h3 id="work" style="border-bottom: 3px solid rgb(116,250,75);color:rgb(116,250,75)">Art</h3>
          </div>
-          <div class="col s12 m6"></div>
-       </div>
+      </div>
        <div class="row">
         <div class="col s12 m6">
            <h5 style="font-style:italic; border-bottom: 1px solid rgb(116,250,75) ">Signal Culture Winter ToolMaker 2019</h5>
