--- a/_layouts/default.html
+++ b/_layouts/default.html
@@ -146,6 +146,11 @@
               <p><a class="infolink" href="https://arthon.tw/video_content.php?id=112">Guggenheim X NYU Restoring Brandon (1998–99) by Shu Lea Cheang </a></p>
               <p><a class="infolink" href="https://www.youtube.com/watch?v=qq2_t3U_f9U">Brandon (1998–99) by Shu Lea Cheang. A video navigation of the restored web artwork</a></p>
            </div>
+
+           <div class="col s12 m6" style="padding-left:10px;">
+              <h3 style="color: #ff00ffff; border-bottom: 1px solid #ff00ffff;">Works in Progress/Ideas </h5>
+              <p><a class="infolink" href="assets/documents/narrative_source_code_report_recipe.pdf" download >A recipe to write narrative source code analysis</a> </p>
+           </div>
          </div>
 
            <div class="status-bar">
